Reduce width of main photo, attempt to fix margin on mobile display

--- a/stylesheet_home.css
+++ b/stylesheet_home.css
@@ -166,7 +166,7 @@ span {
 	background-color: #FDFEFE;
 	font-family: Futura, Tahoma, sans-serif;
 	margin: 0;
-	width: 100%;
+	width: 500px;
 	/*if you want a background image
 	
 	background-image: url(Rinjani.jpg);
@@ -178,7 +178,7 @@ span {
 	width: 100%;
 	top: 0;
 	background-color: #FDFEFE;
-	height: 120px;
+	height: 190px;
 	position: fixed;
 	}
 
@@ -228,7 +228,7 @@ span {
 		
 	#mainimagecontainer {
 	margin: 200px auto 0 auto;
-	width: 1100px;
+	width: 500px;
 	}
 
 	#mainimage {
